/**
 * Greet related messages.
 *
 * This file is really just an example. The data model is completely
 * fictional.
 */
syntax = "proto3";

package greet.v1;

option go_package = "github.com/yoshihiro-shu/connect-go-mcp/internal/gen/greet/v1;greetv1";

// Greeting request
message GreetRequest {
  string name = 1; // Name
}

message GreetResponse {
  string greeting = 1; // Greeting
}

// Ping request
message PingRequest {
  string message = 1; // Message
}

message PingResponse {
  string message = 1; // Message
}

// Greeting service
service GreetService {
  // Greet RPC
  rpc Greet(GreetRequest) returns (GreetResponse) {}
  // Ping RPC
  rpc Ping(PingRequest) returns (PingResponse) {}
}
